...
                            child: Padding(
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  0.0, 10.0, 0.0, 0.0),
                              child: Container(
                                width: 310.0,
                                child: TextFormField(
                                  key: ValueKey('login-emailfield_wmxo'),
                                  controller:
                                      _model.loginEmailfieldTextController,
                                  focusNode: _model.loginEmailfieldFocusNode,
                                  onChanged: (_) => EasyDebounce.debounce(
                                    '_model.loginEmailfieldTextController',
                                    Duration(milliseconds: 2000),
...
                            child: Padding(
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  0.0, 10.0, 0.0, 0.0),
                              child: Container(
                                width: 310.0,
                                child: TextFormField(
                                  key: ValueKey('login-passwordfield_s8k1'),
                                  controller:
                                      _model.loginPasswordfieldTextController,
                                  focusNode: _model.loginPasswordfieldFocusNode,
                                  autofocus: false,
                                  obscureText:
                                      !_model.loginPasswordfieldVisibility,
...
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                0.0, 30.0, 0.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('Button_9hm5'),
                              onPressed: () async {
                                logFirebaseEvent('LOGIN_PAGE_LOGIN_BTN_ON_TAP');
                                await authManager.refreshUser();
                                Function() _navigate = () {};
                                logFirebaseEvent('Button_auth');
                                GoRouter.of(context).prepareAuthEvent();
...
                                        .bodyMedium
                                        .fontStyle,
                                  ),
                            ),
                          ),
                          FFButtonWidget(
                            key: ValueKey('Button_w519'),
                            onPressed: () async {
                              logFirebaseEvent('LOGIN_PAGE_SIGN_UP_BTN_ON_TAP');
                              logFirebaseEvent('Button_navigate_to');

                              context.pushNamed(SignupWidget.routeName);
                            },
...
