...
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 10.0, 0.0, 0.0),
                                        child: Container(
                                          width: 310.0,
                                          child: TextFormField(
                                            key: ValueKey(
                                                'signup-EmailFieldnew_375e'),
                                            controller: _model
                                                .signupEmailFieldnewTextController,
                                            focusNode: _model
                                                .signupEmailFieldnewFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 10.0, 0.0, 0.0),
                                        child: Container(
                                          width: 310.0,
                                          child: TextFormField(
                                            key: ValueKey(
                                                'signup-PasswordFieldnew_n2cx'),
                                            controller: _model
                                                .signupPasswordFieldnewTextController,
                                            focusNode: _model
                                                .signupPasswordFieldnewFocusNode,
                                            autofocus: false,
                                            textCapitalization:
...
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 10.0, 0.0, 0.0),
                                        child: Container(
                                          width: 310.0,
                                          child: TextFormField(
                                            key: ValueKey(
                                                'signup-ConfirmPasswordFieldnew_w0an'),
                                            controller: _model
                                                .signupConfirmPasswordFieldnewTextController,
                                            focusNode: _model
                                                .signupConfirmPasswordFieldnewFocusNode,
                                            autofocus: false,
                                            textInputAction:
...
                                      ),
                                    ),
                                    Padding(
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          0.0, 20.0, 0.0, 0.0),
                                      child: FFButtonWidget(
                                        key: ValueKey('Button_2icf'),
                                        onPressed: () async {
                                          logFirebaseEvent(
                                              'SIGNUP_PAGE_SIGN_UP_BTN_ON_TAP');
                                          logFirebaseEvent(
                                              'Button_validate_form');
                                          if (_model.formKey.currentState ==
...
